# automatic-goggles-public

./: .gitignore  .pre-commit-config.yaml  COMPLETE_GUIDE.md  DEPLOYMENT.md  README.md  example.py  example_usage.ipynb  pyproject.toml  requirements.txt  setup.py  test_optional_reasoning.py  validate_package.py
.github/workflows/: test-and-build.yml
tests/: test_processor.py
transtype/: __init__.py  models.py  processor.py
